# C-Developments

./: CMakeLists.txt  README.md
include/: Base64.h  CollisionElement.h  Direction.h  Maths.h  NamespaceTest.h  SharedContext.h  Timer.h  Utilities.h
include/Animations/: Animation.h  AnimationDetails.h  AnimationPlayer.h
include/Entities/: Character.h  Entity.h  EntityDetails.h  EntityState.h  EntityType.h  Player.h  PowerUp.h
include/Events/: Binding.h  EventDetails.h  EventType.h  KeyBindingName.h
include/Factories/: Factory.h
include/Game/: Camera.h  Game.h
include/Locators/: EventManagerLocator.h  TextureManagerLocator.h  TileSheetManagerLocator.h
include/Managers/: AnimationManager.h  CollisionManager.h  EntityManager.h  EventManager.h  GameManager.h  LevelManager.h  ResourceManager.h  StateManager.h  TextureManager.h  TileSheetManager.h
include/Map/: CollidableTile.h  CollidableTileLayer.h  InteractiveTileLayer.h  InteractiveTileType.h  Layer.h  LayerType.h  MapDetails.h  Tile.h  TileInfo.h  TileLayer.h  TileSetDetails.h  WorldMap.h
include/Observer/: Observer.h
include/Parser/: GUIParser.h  LevelParser.h  StateParser.h
include/Sprite/: Animation.h  AnimationName.h  SpriteSheetDetails.h  TileSheet.h  TileSheetDetails.h
include/States/: StateBase.h  StateGame.h  StateMainMenu.h  StateType.h  StateWinGame.h
include/Tiles/: BouncyTile.h  CoinDispenserTile.h  CoinTile.h  DoorTile.h  InteractiveTile.h  KeyTile.h  LadderTile.h  LockTile.h  MovingCoinTile.h  SpikeTile.h  TileType.h
src/: Base64.cpp  Timer.cpp  Utilities.cpp  main.cpp
src/Game/: Game.cpp
(+44 files in other folders)
